force-app/main/default/objects/CER_Formula__mdt/CER_Formula__mdt.object-meta.xml
<CustomObject>
    <label>CER Formula</label>
    <pluralLabel>CER Formulas</pluralLabel>
</CustomObject>