force-app/main/default/objects/CER_Formula__mdt/fields/Domain_Star_Range__c.field-meta.xml
<CustomField>
    <fullName>Domain_Star_Range__c</fullName>
    <description>Scoring individual questions renders a score 1-4. This field splits the possible points across 5 stars.</description>
    <label>Domain Star Range</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>