force-app/main/default/objects/CER_Formula__mdt/fields/Response__c.field-meta.xml
<CustomField>
    <fullName>Response__c</fullName>
    <label>Response</label>
    <length>100</length>
    <type>Text</type>
</CustomField>